grpc-server/k8/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-1
  namespace: grpc-istio
  labels:
    name: grpc-server-1
    server: server-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
        server: server-1
      annotations:
        sidecar.istio.io/inject: 'true'
        proxy.istio.io/config: 'holdApplicationUntilProxyStarts: true'
        inject.istio.io/templates: 'grpc-agent'
    spec:
      containers:
        - name: grpc-server
          image: grpc-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-2
  namespace: grpc-istio
  labels:
    name: grpc-server-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
        server: server-2
      annotations:
        sidecar.istio.io/inject: 'true'
        proxy.istio.io/config: 'holdApplicationUntilProxyStarts: true'
        inject.istio.io/templates: 'grpc-agent'
    spec:
      containers:
        - name: grpc-server
          image: grpc-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
