grpc-server/k8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
  namespace: grpc-istio
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9090
      name: tcp-9090
      targetPort: 9090
  selector:
    app: grpc-server
#  clusterIP: None
